# SPIR1

spir_atnv/: CMakeLists.txt  README.md  package.xml
spir_atnv/include/: .kdev_include_paths
spir_atnv/include/spir_atnv/: calc_coeff_matrix.h  control.h  kalman.hpp  kinematics.h  model_do.h  rise_pid.h  robust_integral_control.h  robust_integral_control_full_dof.h
spir_atnv/launch/: BringUpATNV.launch  BringUpControl.launch  BringUpIMUControl.launch  BringUpOpenControl.launch  BringUpOpenControl.launch~  BringUpPIDControl.launch
spir_atnv/msg/: ThrustStamped.msg
spir_atnv/src/class_files/: calc_coeff_matrix.cpp  control.cpp  kalman.cpp  kinematics.cpp  model_do.cpp  rise_pid.cpp  robust_integral_control.cpp  robust_integral_control_full_dof.cpp
spir_atnv/src/nodes/: Open_loop_test1.cpp  PID_control1.cpp  atnv_control.cpp  control_node.cpp  imu_control.cpp  reference_generator.cpp
spir_body/: CMakeLists.txt  README.md  package.xml
spir_body/config/: spir_analyzers.yaml
spir_body/include/: .kdev_include_paths
spir_body/include/spir_body/: calc_coeff_matrix.h  clusters.h  dbscan.h  distance.h
spir_body/launch/: spir_body_core.launch  spir_diagnostics.launch
spir_body/mesh/visual/: IMU.STL  LV_with_mounting_plate.STL  arms.STL  frame_mesh.STL  frame_mesh_withArms.STL  thruster_mesh.STL
spir_body/msg/: PileStateStamped.msg
spir_body/src/: maxon_motor.yaml
spir_body/src/class_files/: calc_coeff_matrix.cpp  db_scan.cpp
spir_body/src/nodes/: display_topics_interface.cpp  network_diagnostics.cpp  spir_tf.cpp
spir_body/udev/: 25-spir-imu.rules  25-spir-sonar.rules  25-spir-webcams.rules  Readme  install_rules.sh
spir_body/urdf/: spir_body.urdf
